--- a/index.html
+++ b/index.html
@@ -3,9 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>assighnment-01-web flow website</title>
+    <title>assighnment-01-web-flow-website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="styles/style.css">
+
 </head>
-<body>
-    
+<body class="raleway-font">
+    <header class="header">
+        <nav>
+           <h2><b>Logo</b></h2>
+           <p>Sign Up </p>
+
+        </nav>
+
+        <div class="header-container">
+            <div>
+                <h4>Cool Dark UI Template for <br>Webflow Agencies!</h4>
+            </div>
+            <div>
+                <p>Stay Pocused</p>
+            </div>
+        </div>
+    </header>
+<!-- Header section start here -->
+<main>
+<section class="action-section">
+<div class="action-container">
+<div class="headings">
+    <h3>See It in Action</h3>
+    <p>Explore the live preview and imagine your brand in this bold new look.</p>
+    <h5>Launch Live Preview</h5>
+</div>
+<div>
+    <img src="Assets/wc-mini.png" alt="" srcset="">
+</div>
+
+</div>
+</section>
+
+<!-- ////////// -->
+ <section class="users-section">
+    <div class="user-container">
+  <h3>Joined Thousands of Productive Users</h3>
+  
+<div class="user">
+  <div>
+    <h1>50k</h1>
+    <p>Active Users</p>
+    </div>
+    <div>
+    <h1>2M+</h1>
+    <p>Focus Sessions</p>
+    </div>
+    <div>
+    <h1>95%</h1>
+    <P>Satisfaction Rate</P>
+    </div>
+</div>
+</div>
+ </section>
+</main>
+<footer>
+
+</footer>
+
 </body>
 </html>
