--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="styles/style.css">
 
 </head>
+<!-- header section -->
 <body class="raleway-font">
     <header class="header">
         <nav>
@@ -27,7 +28,7 @@
             </div>
         </div>
     </header>
-<!-- Header section start here -->
+<!-- Action section start here -->
 <main>
 <section class="action-section">
 <div class="action-container">
@@ -44,26 +45,7 @@
 </section>
 
 <!-- ////////// -->
- <section class="users-section">
-    <div class="user-container">
-  <h3>Joined Thousands of Productive Users</h3>
-  
-<div class="user">
-  <div>
-    <h1>50k</h1>
-    <p>Active Users</p>
-    </div>
-    <div>
-    <h1>2M+</h1>
-    <p>Focus Sessions</p>
-    </div>
-    <div>
-    <h1>95%</h1>
-    <P>Satisfaction Rate</P>
-    </div>
-</div>
-</div>
- </section>
+ 
 </main>
 <footer>
 
