--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles/style.css">
-
+<!-- inter font -->
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <!-- header section -->
 <body class="raleway-font">
@@ -44,10 +47,142 @@
 </div>
 </section>
 
-<!-- ////////// -->
- 
+<!-- section Users start here -->
+ <section class="users-section">
+    <div class="user-container">
+  <h3>Joined Thousands of Productive Users</h3>
+  
+<div class="user">
+  <div>
+    <h1>50k</h1>
+    <p>Active Users</p>
+    </div>
+    <div>
+    <h1>2M+</h1>
+    <p>Focus Sessions</p>
+    </div>
+    <div>
+    <h1>95%</h1>
+    <P>Satisfaction Rate</P>
+    </div>
+</div>
+</div>
+ </section>
+
+<!-- reviews section start here -->
+<section class="card-sectoin">
+    <div class="title">
+<p>What our users say</p>
+</div>
+<div class="card-container">
+<div class="card">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    <h3>Loved by Designers</h3>
+     <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+     <div class="review">
+    <img src="Assets/avatar.png" alt="" srcset="">
+    <p>Reviewer name<br>Date</p>
+
+    </div>
+</div>
+<div class="card">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    <h3>Loved by Designers</h3>
+     <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+     <div class="review">
+    <img src="Assets/avatar.png" alt="" srcset="">
+    <p>Reviewer name<br>Date</p>
+    <p>Date</p>
+    </div>
+</div>
+<div class="card">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    <img src="Assets/icon-star.png" alt="">
+    <h3>Loved by Designers</h3>
+    <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+    <div class="review">
+    <img src="Assets/avatar.png" alt="" srcset="">
+    <p>Reviewer name<br>Date</p>
+    
+   
+    </div>
+</div>
+</div>
+
+
+</section>
+<!-- form section start here -->
+
+<section class="form-section">
+
+<div class="form-container">
+<div class="title2">
+<h1>Let’s Get in Touch</h1>
+</div>
+<div class="form">
+<form>
+    <P>Email</P>
+        <input type="email" name="" id="email" placeholder=" enter your email">
+    <p>Name</p>
+    <input type="email" name="" id="" placeholder="Full Name">
+    <p>Massage</p>
+    <textarea name="" id="" placeholder="Write your massage..."></textarea>
+    <button>Get in Touch</button>
+</form>
+
+
+
+
+
+
+
+</div>
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+</section>
 </main>
+<!-- foooter section start here -->
+
 <footer>
+ <section class="footer-section">
+
+<div class="footer-container">
+<h1>LOGO</h1>
+<p>Ready to elevate your online presence? Contact us today to discuss your project and discover how we can bring your vision to life.</p>
+
+
+<div class="list">
+    <p>Home</p>
+    <p>About</p>
+    <p>How it Works</p>
+    <p>Services</p>
+</div>
+</div>
+
+
+ </section>
 
 </footer>
 
