added form,footer section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </div>
 </section>
 
-<!-- section Users start here -->
+<!-- Users section start here -->
  <section class="users-section">
     <div class="user-container">
   <h3>Joined Thousands of Productive Users</h3>
@@ -185,6 +185,5 @@
  </section>
 
 </footer>
-
 </body>
 </html>
